--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "cmdk": "^1.1.1",
     "country-codes-list": "^2.0.0",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
