--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,13 +28,15 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
+    "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
