--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -15,6 +15,7 @@
     "@workspace/ui": "workspace:*",
     "cmdk": "^1.1.1",
     "country-codes-list": "^2.0.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
