--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
-
     "cmdk": "^1.1.1",
     "country-codes-list": "^2.0.0",
     "framer-motion": "^12.23.12",
@@ -21,7 +20,10 @@
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-phone-number-input": "^3.4.12",
+    "sonner": "^2.0.7",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
