--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -16,6 +16,7 @@
     "cmdk": "^1.1.1",
     "country-codes-list": "^2.0.0",
     "framer-motion": "^12.23.12",
+    "jose": "^6.1.0",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
