--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,8 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^160.0.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
