--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.894.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "dotenv-cli": "^10.0.0",
