--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
+    "axios": "^1.12.2",
     "cmdk": "^1.1.1",
+    "cookies-next": "^6.1.0",
     "country-codes-list": "^2.0.0",
     "framer-motion": "^12.23.12",
     "jose": "^6.1.0",
