--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.894.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
