changed sign up and implemented change passeord functionality

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "@aws-sdk/client-s3": "^3.894.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
@@ -36,6 +37,7 @@
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "jsonwebtoken": "^9.0.2",
+    "p-limit": "^7.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -43,11 +45,13 @@
     "postgres": "^3.4.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-serve-static-core": "^5.0.7",
     "@types/express-validator": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.9",
+    "@types/p-limit": "^2.2.0",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
