--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -12,18 +12,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@workspace/ui": "workspace:*",
     "axios": "^1.12.2",
     "cmdk": "^1.1.1",
     "cookies-next": "^6.1.0",
     "country-codes-list": "^2.0.0",
     "framer-motion": "^12.23.12",
+    "install": "^0.13.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-phone-number-input": "^3.4.12",
     "sonner": "^2.0.7",
     "zod": "^3.25.76"
