--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.894.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "p-limit": "^7.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
