completed s3 sign in and database new record

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "p-limit": "^7.1.1",
     "passport": "^0.7.0",
@@ -52,6 +53,7 @@
     "@types/express-serve-static-core": "^5.0.7",
     "@types/express-validator": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.9",
     "@types/p-limit": "^2.2.0",
     "@types/passport": "^1.0.17",
