--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.23.12",
     "install": "^0.13.0",
     "jose": "^6.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "next": "^15.4.5",
     "next-themes": "^0.4.6",
@@ -33,6 +34,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.19.9",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
