--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -50,7 +50,8 @@
     "pdf-parse": "^2.1.7",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
