--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,6 +36,7 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -45,12 +46,17 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.1.7",
     "pg": "^8.16.3",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "tesseract.js": "^6.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-fileupload": "^1.5.1",
     "@types/express-serve-static-core": "^5.0.7",
     "@types/express-validator": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.10",
