--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -48,6 +48,7 @@
     "pdf-parse": "^2.1.7",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "serverless-http": "^4.0.0",
     "tesseract.js": "^6.0.1",
     "uuid": "^13.0.0"
   },
