--- a/apps/api/buildspec.yml
+++ b/apps/api/buildspec.yml
@@ -1,37 +1,24 @@
 version: 0.2
 
-environment:
-  variables:
-    # PNPM_STORE_DIR: "/root/.pnpm-store"
-    # TURBO_CACHE_DIR: ".turbo"
-
 phases:
   install:
     runtime-versions:
       nodejs: 22
     commands:
       - echo Installing dependencies...
-      # - npm ci
-      # - cd apps/api
       - npm install -g pnpm@10.18.0
       - pnpm -v
-      # - mkdir -p $PNPM_STORE_DIR
-      # - echo "Ensure .turbo exists"
-      # - mkdir -p $TURBO_CACHE_DIR
 
   pre_build:
     commands:
       - echo "Restore caches (CodeBuild will handle S3 cache automatically for configured paths)"
       - echo "Installing dependencies (frozen lockfile)"
       - pnpm install --frozen-lockfile
-      # - pnpm install
 
 
   build:
     commands:
       - echo Packaging artifacts...
-      # - zip -r output.zip .
-      # - cd ./apps/api
       - pnpm build -F api
   
   post_build:
@@ -39,14 +26,14 @@ phases:
       - echo "Build finished"
       - echo "Listing root"
       - ls -la 
+      - cp -r apps/api/node_modules apps/api/dist
       - echo "Listing apps/api"
       - ls -la apps/api
 
 artifacts:
-  base-directory: ./apps/api  # or a specific folder like "build-output"
+  base-directory: ./apps/api/dist  # or a specific folder like "build-output"
   files:
-    - 'dist/**/*'
-    - 'node_modules'
+    - '**/*'
   discard-paths: no   # Keep folder structure intact
 # artifacts:
 #   files:
