--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,12 +32,13 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dommatrix": "1.0.3",
     "dotenv": "^17.2.2",
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "google-auth-library": "^10.3.0",
-    "googleapis": "^160.0.0",
+    "googleapis": "160.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "p-limit": "^7.1.1",
