--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.896.0",
+    "@aws-sdk/client-sqs": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
