--- a/apps/api/buildspec.yml
+++ b/apps/api/buildspec.yml
@@ -1,42 +1,41 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      nodejs: 22
-    commands:
-      - echo Installing dependencies...
-      - npm install -g pnpm@10.18.0
-      - pnpm -v
-
   pre_build:
     commands:
-      - echo "Restore caches (CodeBuild will handle S3 cache automatically for configured paths)"
-      - echo "Installing dependencies (frozen lockfile)"
-      - pnpm install --frozen-lockfile
-
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
 
   build:
     commands:
-      - echo Packaging artifacts...
-      - pnpm build -F api
-  
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - cd apps/api
+      - docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+      - docker build -t $ECR_REPOSITORY:latest .
+      - echo Build completed on `date`
+
   post_build:
     commands:
-      - echo "Build finished"
-      - echo "Listing root"
-      - ls -la 
-      - mv apps/api/node_modules apps/api/dist/node_modules
-      - echo "Listing apps/api"
-      - ls -la apps/api
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
+      - docker push $ECR_REPOSITORY:$IMAGE_TAG
+      - docker push $ECR_REPOSITORY:latest
+      - echo Writing image definitions file...
+      - printf '[{"name":"payables-api","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - echo Pushing the Docker images completed on `date`
 
 artifacts:
-  base-directory: ./apps/api/dist  # or a specific folder like "build-output"
   files:
-    - '**/*'
-  discard-paths: no   # Keep folder structure intact
-# artifacts:
-#   files:
-#     # - output.zip
-#     - ./*
-#   discard-paths: yes
+    - apps/api/imagedefinitions.json
+    - apps/api/**/*
+  name: payables-api-$(date +%Y-%m-%d)
+
+cache:
+  paths:
+    - '/root/.npm/**/*'
