--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,9 @@
     "@aws-sdk/client-sqs": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "axios": "^1.12.2",
+    "express-validator": "^7.2.1",
+    "pino": "^9.9.4",
+    "pino-pretty": "^13.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -50,9 +53,9 @@
     "pdf-parse": "^2.1.7",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "serverless-http": "^4.0.0",
     "tesseract.js": "^6.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
@@ -78,9 +81,6 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-import": "^2.29.1",
-    "express-validator": "^7.2.1",
-    "pino": "^9.9.4",
-    "pino-pretty": "^13.1.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "tsx": "^4.20.5",
