--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,10 +29,8 @@
     "@aws-sdk/client-s3": "^3.896.0",
     "@aws-sdk/client-sqs": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@thednp/dommatrix": "^2.0.12",
     "axios": "^1.12.2",
-    "express-validator": "^7.2.1",
-    "pino": "^9.9.4",
-    "pino-pretty": "^13.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -41,8 +39,9 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "google-auth-library": "^10.3.0",
-    "googleapis": "^163.0.0",
+    "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "p-limit": "^7.1.1",
@@ -52,7 +51,10 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.1.7",
     "pg": "^8.16.3",
+    "pino": "^9.9.4",
+    "pino-pretty": "^13.1.1",
     "postgres": "^3.4.7",
+    "stripe": "^19.1.0",
     "tesseract.js": "^6.0.1",
     "uuid": "^13.0.0",
     "zod": "^3.25.76"
@@ -73,6 +75,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.5",
     "@types/pino": "^7.0.5",
+    "@types/stripe": "^8.0.417",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "drizzle-kit": "^0.31.4",
