--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -21,6 +21,8 @@ S3_REGION=us-east-1
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:5000/api/v1/google/callback
+GOOGLE_AUTH_REDIRECT_URI=http://localhost:5000/api/v1/auth/google/callback
 
 # QuickBooks Configuration
 QUICKBOOKS_CLIENT_ID=your-quickbooks-client-id
