--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,9 +30,6 @@
     "@aws-sdk/client-sqs": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "axios": "^1.12.2",
-    "express-validator": "^7.2.1",
-    "pino": "^9.9.4",
-    "pino-pretty": "^13.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -41,17 +38,21 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "google-auth-library": "^10.3.0",
     "googleapis": "^163.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "p-limit": "^7.1.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.1.7",
     "pg": "^8.16.3",
+    "pino": "^9.9.4",
+    "pino-pretty": "^13.1.1",
     "postgres": "^3.4.7",
     "tesseract.js": "^6.0.1",
     "uuid": "^13.0.0",
@@ -69,6 +70,7 @@
     "@types/node": "^20.19.9",
     "@types/p-limit": "^2.2.0",
     "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.5",
