--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -55,6 +55,7 @@
     "pino": "^9.9.4",
     "pino-pretty": "^13.1.1",
     "postgres": "^3.4.7",
+    "socket.io": "^4.8.1",
     "stripe": "^19.1.0",
     "tesseract.js": "^6.0.1",
     "uuid": "^13.0.0",
@@ -77,6 +78,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.15.5",
     "@types/pino": "^7.0.5",
+    "@types/socket.io": "^3.0.2",
     "@types/stripe": "^8.0.417",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
