--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-phone-number-input": "^3.4.12",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "zod": "^3.25.76"
   },
