--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -24,6 +24,10 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:5000/api/v1/google/callback
 GOOGLE_AUTH_REDIRECT_URI=http://localhost:5000/api/v1/auth/google/callback
 
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_EMBEDDING_CONCURRENCY=2
+
 # QuickBooks Configuration
 QUICKBOOKS_CLIENT_ID=your-quickbooks-client-id
 QUICKBOOKS_CLIENT_SECRET=your-quickbooks-client-secret
