--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -44,6 +44,7 @@
     "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
+    "openai": "^4.104.0",
     "p-limit": "^7.1.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
