--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,8 @@
     "@aws-sdk/client-s3": "^3.896.0",
     "@aws-sdk/client-sqs": "^3.910.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@azure/msal-node": "^3.8.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@thednp/dommatrix": "^2.0.12",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
